# GSA_schlitte

./: README  gitsetup.sh
allost_pot_python/: potential_module.py
code_test/entropy/: README
code_test/entropy/gromacs/: eigenval.xvg
entropy_python/: config_entropy_determinant.py  pca_module.py  schlitter.py
entropy_python/ana_scripts/: 01_split_traj.sh  01_split_traj_analyse.sh  02_split_traj_gromacs.sh  entropy_extract.py  mdconvert.py  split_resid.sh  split_traj.sh  split_traj_plot.R
entropy_python/src/: redundant_code.py  schlitter.py
entropy_python/test/: cat_ca_testfile_free.dcd  cat_ca_testfile_restr.dcd
papers/: entropy.bib
phylogen/: format_newick.sh  phylogen_schlitte.py
python/: .mi2eig.py.swp
python/test/: pca_module.py  schlitter.py
schlitter/: INSTALL  Makefile.am  Makefile.in  README  configure  configure.ac
schlitter/data/: free.gro  free.xtc
schlitter/python/: schlitter.py
schlitter/src/: Makefile.am  Makefile.in  arg.c  arg.h  argpdb.h  config.h  config.h.in  covariance.c  covariance.h  doxygen.cfg  error.c  getgromacs.c  getgromacs.h  getpdb.c  getpdb.h  gettraj.c  gettraj.h  gsl_aux.c  gsl_aux.h  pdb_structure.h  schlitter.c  schlitter.h  seq.h
schlitter/src/.deps/: arg.Po  getgromacs.Po  safe.Po  schlitter.Po
schlitter/test_trajectory/: test_short_traj.xtc
schlitter/tests/: Makefile.am  Makefile.in  crossprod.R  schlitter.R  test1.R  test1.sh  test_decaA.R  test_decaA.sh
