#===============================================================================
# Makefile.am : for automake
# #===============================================================================
#
noinst_DATA = \
	test1.pdb

noinst_SCRIPTS = \
	test1.sh

EXTRA_DIST = $(noinst_DATA) $(noinst_SCRIPTS)

TESTS = $(noinst_SCRIPTS)

