#===============================================================================
# Makefile.am : for automake
# #===============================================================================
#
noinst_DATA = \
	decaA.pdb \
	decaA_1.g96

noinst_SCRIPTS = \
	test_decaA.sh

EXTRA_DIST = $(noinst_DATA) $(noinst_SCRIPTS)

TESTS = $(noinst_SCRIPTS)

